--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/usersdb
+spring.datasource.username=root
+spring.datasource.password = 23676123
+
+server.error.include-exception=true
+server.error.include-stacktrace=always
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql= true
+spring.jpa.properties.hibernate.hbm2ddl.auto = update
+
+spring.mvc.hiddenmethod.filter.enabled=true
 
