--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ server.error.include-stacktrace=always
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql= true
-spring.jpa.properties.hibernate.hbm2ddl.auto = update
+spring.jpa.properties.hibernate.hbm2ddl.auto = create-drop
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+logging.level.org.springframework.security= DEBUG
