--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,18 @@
 			<version>3.19.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery</artifactId>
+			<version>3.3.1-1</version>
+		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>popper.js</artifactId>
+			<version>1.14.1</version>
+		</dependency>
+	</dependencies>
 
 
 	<build>
